tests/errors/surf_lib_24.ki
# time.strptime of text that does not match the format must throw.
var t = import("time")
discard t.strptime("not a date", "%Y-%m-%d")
